# zprust

./: Cargo.toml  README.md  notes.md  notes.mz~  steps.md
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
