[package]
name = "zprust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name= "zprust"

[dependencies]
actix-web = "4.9.0"
chrono = {version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
env_logger = "0.9"
log = "0.4.22"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
